// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`columnFilterMenus reducer snapshots dispatches oneOnRestOff 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "mockMenu": Immutable.List [
      Immutable.Map {
        "name": "item1",
        "active": false,
      },
      Immutable.Map {
        "name": "item2",
        "active": false,
      },
      Immutable.Map {
        "name": "item3",
        "active": true,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches setVisibleMenu 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "visibleMenu": "Groups",
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches toggleAllInverseMenuItems 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "mockMenu": Immutable.List [
      Immutable.Map {
        "name": "item1",
        "active": true,
      },
      Immutable.Map {
        "name": "item2",
        "active": false,
      },
      Immutable.Map {
        "name": "item3",
        "active": true,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches toggleAllMenuItemsOff 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "mockMenu": Immutable.List [
      Immutable.Map {
        "name": "item1",
        "active": false,
      },
      Immutable.Map {
        "name": "item2",
        "active": false,
      },
      Immutable.Map {
        "name": "item3",
        "active": false,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches toggleAllMenuItemsOn 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "mockMenu": Immutable.List [
      Immutable.Map {
        "name": "item1",
        "active": true,
      },
      Immutable.Map {
        "name": "item2",
        "active": true,
      },
      Immutable.Map {
        "name": "item3",
        "active": true,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches toggleMenuItems 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "mockMenu": Immutable.List [
      Immutable.Map {
        "name": "item1",
        "active": true,
      },
      Immutable.Map {
        "name": "item2",
        "active": false,
      },
      Immutable.Map {
        "name": "item3",
        "active": false,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches toggleTimeFormat 1`] = `
Immutable.Map {
  "twelveHourFormat": false,
}
`;

exports[`columnFilterMenus reducer snapshots dispatches updateGroupsColumnFilter 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "Groups": Immutable.List [
      Immutable.Map {
        "mockItem": "",
        "active": true,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches updateSkillsColumnFilter 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "Skills": Immutable.List [
      Immutable.Map {
        "mockItem": "",
        "active": true,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots returns the correct initial state 1`] = `
Immutable.Map {
  "skills": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Proficiency",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "permissions": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "flows": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "users": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "First Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Last Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Email",
        "active": true,
      },
      Immutable.Map {
        "name": "External Id",
        "active": true,
      },
      Immutable.Map {
        "name": "Role",
        "active": true,
      },
      Immutable.Map {
        "name": "Presence",
        "active": true,
      },
      Immutable.Map {
        "name": "Invitation Status",
        "active": true,
      },
      Immutable.Map {
        "name": "Platform Status",
        "active": true,
      },
    ],
  },
  "protectedBranding": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "platformRoles": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "customMetrics": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Metric Type",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "groups": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "twelveHourFormat": true,
  "lists": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "List Type",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "chatWidgets": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "none": Immutable.Map {
    "Columns": Immutable.List [],
    "visibleMenu": "none",
  },
  "outboundIdentifiers": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Value",
        "active": true,
      },
      Immutable.Map {
        "name": "channelType",
        "active": true,
      },
      Immutable.Map {
        "name": "flowId",
        "active": false,
      },
    ],
  },
  "interactionMonitoring": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "InteractionId",
        "active": true,
      },
      Immutable.Map {
        "name": "Agent",
        "active": true,
      },
      Immutable.Map {
        "name": "CustomerId",
        "active": true,
      },
      Immutable.Map {
        "name": "ContactPoint",
        "active": true,
      },
      Immutable.Map {
        "name": "Flow",
        "active": true,
      },
      Immutable.Map {
        "name": "Channel",
        "active": true,
      },
      Immutable.Map {
        "name": "Direction",
        "active": true,
      },
      Immutable.Map {
        "name": "Presence State",
        "active": false,
      },
      Immutable.Map {
        "name": "Start Date",
        "active": false,
      },
      Immutable.Map {
        "name": "StartTime",
        "active": true,
      },
      Immutable.Map {
        "name": "ElapsedTime",
        "active": true,
      },
      Immutable.Map {
        "name": "Monitoring",
        "active": true,
      },
      Immutable.Map {
        "name": "Groups",
        "active": false,
      },
      Immutable.Map {
        "name": "Skills",
        "active": false,
      },
    ],
    "Groups": Immutable.List [],
    "Skills": Immutable.List [],
    "Direction": Immutable.List [
      Immutable.Map {
        "name": "All",
        "active": true,
      },
      Immutable.Map {
        "name": "Inbound",
        "active": false,
      },
      Immutable.Map {
        "name": "Outbound",
        "active": false,
      },
      Immutable.Map {
        "name": "Agent Initiated",
        "active": false,
      },
    ],
    "Monitoring": Immutable.List [
      Immutable.Map {
        "name": "All",
        "active": true,
      },
      Immutable.Map {
        "name": "Monitored",
        "active": false,
      },
      Immutable.Map {
        "name": "Not Monitored",
        "active": false,
      },
    ],
  },
  "listTypes": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "branding": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "outboundIdentifierLists": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
    ],
  },
  "roles": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Permissions",
        "active": true,
      },
    ],
  },
  "emailTemplates": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
    ],
  },
}
`;
